[gd_scene load_steps=24 format=3 uid="uid://bmqevs0vheol7"]

[ext_resource type="Script" uid="uid://c331s8cm2gjtp" path="res://scenes/bike/player_controller.gd" id="1_5uol1"]
[ext_resource type="PackedScene" uid="uid://bkehfbgcj2elg" path="res://assets/bikes/GoogleMotorcycleSportbike.glb" id="1_ujl86"]
[ext_resource type="PackedScene" uid="uid://gobjlpuvfmm8" path="res://scenes/character/ik_char_mesh.tscn" id="2_wi4rf"]
[ext_resource type="Material" uid="uid://bfxhki5bfmyn1" path="res://scenes/bike/tail_light_material.tres" id="3_n1tms"]
[ext_resource type="Script" uid="uid://ct5kbf1mujm7r" path="res://scenes/bike/components/player_animation_controller.gd" id="4_n1tms"]
[ext_resource type="Script" uid="uid://l500tpp42su8" path="res://scenes/bike/components/bike_gearing.gd" id="5_gearing"]
[ext_resource type="Script" uid="uid://bpqhimqk1dt2d" path="res://scenes/bike/components/bike_tricks.gd" id="7_tricks"]
[ext_resource type="Script" uid="uid://cgy5mk1x6lanu" path="res://scenes/bike/components/bike_physics.gd" id="8_physics"]
[ext_resource type="Script" uid="uid://bbk0xwdxhsifa" path="res://scenes/bike/components/bike_crash.gd" id="9_crash"]
[ext_resource type="Script" uid="uid://b662mtkdepm0j" path="res://scenes/bike/components/bike_audio.gd" id="10_audio"]
[ext_resource type="AudioStream" uid="uid://dn6ey2jxm33vt" path="res://assets/motorcycle-stable-rpm.ogg" id="10_t042m"]
[ext_resource type="AudioStream" uid="uid://c61khm016rfjr" path="res://assets/tire-screech-short.ogg" id="11_pgn4o"]
[ext_resource type="Script" uid="uid://pc1xy500s1vu" path="res://scenes/bike/components/bike_ui.gd" id="11_ui"]
[ext_resource type="AudioStream" uid="uid://fghbqufnqde0" path="res://assets/exhaust-pops.ogg" id="12_nkid5"]
[ext_resource type="AudioStream" uid="uid://tkuif41xejv4" path="res://assets/grinding-gear.ogg" id="12_pgn4o"]
[ext_resource type="Script" uid="uid://deoncd44247pm" path="res://scenes/bike/components/bike_input.gd" id="13_input"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_nkid5"]
radius = 0.4

[sub_resource type="Animation" id="Animation_262bm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BikeMesh/IKCharacterMesh/Targets/ButtTarget:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(2.769973e-08, 0.98623186, -0.35969338)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BikeMesh/IKCharacterMesh/Targets/HeadTarget:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.43134058, 1.4476901e-08, 7.8451706e-08)]
}

[sub_resource type="Animation" id="Animation_wi4rf"]
resource_name = "lean_left"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BikeMesh/IKCharacterMesh/Targets/ButtTarget:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(2.769973e-08, 0.98623186, -0.35969338), Vector3(0.25, 0.986, -0.36)]
}

[sub_resource type="Animation" id="Animation_fm7or"]
resource_name = "lean_right"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BikeMesh/IKCharacterMesh/Targets/ButtTarget:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(2.769973e-08, 0.98623186, -0.35969338), Vector3(-0.25, 0.986, -0.36)]
}

[sub_resource type="Animation" id="Animation_voh27"]
resource_name = "snap_neck"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BikeMesh/IKCharacterMesh/Targets/HeadTarget:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.43134058, 1.4476901e-08, 7.8451706e-08), Vector3(-2.1031218, 6.2831855, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fm7or"]
_data = {
&"RESET": SubResource("Animation_262bm"),
&"lean_left": SubResource("Animation_wi4rf"),
&"lean_right": SubResource("Animation_fm7or"),
&"snap_neck": SubResource("Animation_voh27")
}

[sub_resource type="BoxMesh" id="BoxMesh_sdhfr"]
size = Vector3(0.3, 0.055, 0.05)

[node name="PlayerController" type="CharacterBody3D"]
collision_mask = 3
script = ExtResource("1_5uol1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 0.4, 0)
shape = SubResource("CapsuleShape3D_nkid5")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.99976206, 0.0049999, -0.021233829, 0.0005158487, 0.9676885, 0.25214824, 0.021808447, -0.25209916, 0.9674557, -0.23836821, 1.2938731, 2.5680387)
fov = 70.0

[node name="BikeMesh" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="BikeMesh"]
unique_name_in_owner = true
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_fm7or")
}

[node name="IKCharacterMesh" parent="BikeMesh" instance=ExtResource("2_wi4rf")]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -1.509958e-07, 0, 1, 0, 1.509958e-07, 0, -1, 0, 0, 0)
left_leg_magnet = Vector3(1, 0, 1)
right_leg_magnet = Vector3(-1, 0, 1)

[node name="Skeleton3D" parent="BikeMesh/IKCharacterMesh/MixamoRacer" index="0"]
bones/0/position = Vector3(2.769973e-08, 0.98623186, -0.35969338)
bones/0/rotation = Quaternion(0.46173313, 8.114462e-09, 4.2768583e-08, 0.88701886)
bones/8/position = Vector3(1.5199184e-06, 0.1310766, 5.6028366e-06)
bones/8/rotation = Quaternion(0.46174, -0.23288499, 0.40978566, 0.75142294)
bones/8/scale = Vector3(0.99952495, 0.999525, 0.99952507)
bones/9/position = Vector3(-1.5616417e-05, 0.27071893, 3.7550926e-06)
bones/9/rotation = Quaternion(-0.0023527467, 0.15604937, 0.0021566802, 0.9877441)
bones/9/scale = Vector3(0.99995863, 0.99995834, 0.99995863)
bones/10/position = Vector3(1.013279e-06, 0.25567788, 5.364418e-06)
bones/10/rotation = Quaternion(0.03195961, -0.2950585, 0.287866, 0.91052306)
bones/10/scale = Vector3(0.9999232, 0.9999287, 0.999921)
bones/32/position = Vector3(-5.9604645e-08, 0.13107663, -2.6226044e-06)
bones/32/rotation = Quaternion(0.4878232, 0.16656098, -0.51262414, 0.6866604)
bones/32/scale = Vector3(1.0001338, 1.0001336, 1.0001339)
bones/33/position = Vector3(6.3180923e-06, 0.2706902, 3.7252903e-07)
bones/33/rotation = Quaternion(-0.0014275142, -0.21821593, -0.00333457, 0.9758938)
bones/33/scale = Vector3(1.0000056, 1.0000056, 1.0000056)
bones/34/position = Vector3(1.7881393e-06, 0.25565445, -2.7418137e-06)
bones/34/rotation = Quaternion(-0.004041599, 0.17451538, -0.24058597, 0.95480174)
bones/34/scale = Vector3(0.99983805, 0.9997685, 0.9998116)

[node name="LeftArmIK" parent="BikeMesh/IKCharacterMesh/MixamoRacer/Skeleton3D" index="1"]
target = Transform3D(-0.08169469, -0.027651627, -0.9962736, 0.98497635, -0.15483423, -0.0764709, -0.15214273, -0.9875532, 0.039885372, -0.95111763, 0.60892016, 0.40098357)
override_tip_basis = false
use_magnet = false

[node name="RightArmIK" parent="BikeMesh/IKCharacterMesh/MixamoRacer/Skeleton3D" index="2"]
target = Transform3D(-0.04889248, 0.92596906, -0.37442094, -0.52059925, -0.3435467, -0.78163445, -0.85240024, 0.15670708, 0.49885568, 0.9806601, 0.12702164, 0.55838567)

[node name="LeftLegIK" parent="BikeMesh/IKCharacterMesh/MixamoRacer/Skeleton3D" index="3"]
target = Transform3D(-0.9982336, 0.03612911, -0.047162842, -0.059410855, -0.60704976, 0.7924393, -6.939984e-08, 0.7938415, 0.60812396, 0.2375038, 0.39871255, -0.17106614)
magnet = Vector3(1, 0, 1)

[node name="RightLegIK" parent="BikeMesh/IKCharacterMesh/MixamoRacer/Skeleton3D" index="4"]
target = Transform3D(-0.9982256, 0.036801673, -0.046809737, -0.05953972, -0.60723305, 0.7922895, 0.0007331595, 0.7936708, 0.60834676, -0.238, 0.399, -0.171)
magnet = Vector3(-1, 0, 1)

[node name="HeadIK" parent="BikeMesh/IKCharacterMesh/MixamoRacer/Skeleton3D" index="5"]
target = Transform3D(1, 1.274684e-08, 9.343069e-10, -1.274684e-08, 0.9893129, 0.14580679, 9.342784e-10, -0.14580679, 0.9893129, -1.8309903e-07, 1.7583534, 0.73081344)

[node name="HeadTarget" parent="BikeMesh/IKCharacterMesh/Targets" index="0"]
transform = Transform3D(1, -7.2399075e-08, 1.3150904e-08, 7.126601e-08, 0.9084061, -0.41808897, 1.8322893e-08, 0.41808897, 0.9084061, -1.3219673e-07, 1.452965, 0.39370275)

[node name="LeftArmTarget" parent="BikeMesh/IKCharacterMesh/Targets" index="1"]
transform = Transform3D(0.5253975, -0.4328657, 0.7325196, -9.905552e-08, 0.86091965, 0.50874096, -0.8508571, -0.26729122, 0.452325, 0.284, 0.9407963, 0.42305174)

[node name="RightArmTarget" parent="BikeMesh/IKCharacterMesh/Targets" index="2"]
transform = Transform3D(0.8961885, -0.3793976, 0.23000783, 0.062282473, -0.40570283, -0.9118804, 0.43928, 0.83154255, -0.33995625, -0.284, 0.90103054, 0.44884363)

[node name="ButtTarget" parent="BikeMesh/IKCharacterMesh/Targets" index="3"]
transform = Transform3D(1, -6.837967e-08, 5.3890723e-08, 8.336654e-08, 0.57360506, -0.81913203, 2.5099993e-08, 0.81913203, 0.57360506, 2.769973e-08, 0.98623186, -0.35969338)

[node name="LeftLegTarget" parent="BikeMesh/IKCharacterMesh/Targets" index="4"]
transform = Transform3D(-0.9982336, 0.03612911, -0.047162842, -0.059410855, -0.60704976, 0.7924393, -6.939984e-08, 0.7938415, 0.60812396, 0.2375038, 0.39871255, -0.17106614)

[node name="RightLegTarget" parent="BikeMesh/IKCharacterMesh/Targets" index="5"]
transform = Transform3D(-0.9982256, 0.036801673, -0.046809737, -0.05953972, -0.60723305, 0.7922895, 0.0007331595, 0.7936708, 0.60834676, -0.238, 0.399, -0.171)

[node name="GoogleMotorcycleSportbike" parent="BikeMesh" instance=ExtResource("1_ujl86")]
transform = Transform3D(0.018, 0, 0, 0, 0.018, 0, 0, 0, 0.018, 0, 0, 0)

[node name="TailLight" type="MeshInstance3D" parent="BikeMesh"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.83589214, 0.83504957)
mesh = SubResource("BoxMesh_sdhfr")
surface_material_override/0 = ExtResource("3_n1tms")

[node name="Functionality" type="Node" parent="."]

[node name="PlayerAnimationController" type="Node" parent="Functionality"]
unique_name_in_owner = true
script = ExtResource("4_n1tms")

[node name="BikeInput" type="Node" parent="Functionality"]
unique_name_in_owner = true
script = ExtResource("13_input")

[node name="BikePhysics" type="Node" parent="Functionality"]
unique_name_in_owner = true
script = ExtResource("8_physics")

[node name="BikeGearing" type="Node" parent="Functionality"]
unique_name_in_owner = true
script = ExtResource("5_gearing")

[node name="BikeTricks" type="Node" parent="Functionality"]
unique_name_in_owner = true
script = ExtResource("7_tricks")

[node name="BikeCrash" type="Node" parent="Functionality"]
unique_name_in_owner = true
script = ExtResource("9_crash")

[node name="BikeAudio" type="Node" parent="Functionality"]
unique_name_in_owner = true
script = ExtResource("10_audio")

[node name="BikeUI" type="Node" parent="Functionality"]
unique_name_in_owner = true
script = ExtResource("11_ui")

[node name="Sounds" type="Node" parent="."]

[node name="EngineSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("10_t042m")
volume_db = -25.0
pitch_scale = 0.49

[node name="TireScreechSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("11_pgn4o")
volume_db = -15.0
pitch_scale = 0.9

[node name="EngineGrindSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("12_pgn4o")
volume_db = -10.0

[node name="ExhaustPopsSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("12_nkid5")
volume_db = 2.5

[node name="BikeMarkers" type="Node3D" parent="."]

[node name="RearWheelMarker" type="Marker3D" parent="BikeMarkers"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.68403995)

[node name="FrontWheelMarker" type="Marker3D" parent="BikeMarkers"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.7181249)

[node name="OriginMarker" type="Marker3D" parent="BikeMarkers"]
unique_name_in_owner = true

[node name="MotoUI" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="MotoUI"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="GearLabel" type="Label" parent="MotoUI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "Gear:"

[node name="SpeedLabel" type="Label" parent="MotoUI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "Speed:"

[node name="ThrottleBar" type="ProgressBar" parent="MotoUI/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 12)
layout_mode = 2
size_flags_horizontal = 8
max_value = 1.0
show_percentage = false

[node name="RPMBar" type="ProgressBar" parent="MotoUI/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 12)
layout_mode = 2
size_flags_horizontal = 8
max_value = 1.0
show_percentage = false

[node name="BrakeDangerBar" type="ProgressBar" parent="MotoUI/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 12)
layout_mode = 2
size_flags_horizontal = 8
max_value = 1.0
show_percentage = false

[node name="ClutchBar" type="ProgressBar" parent="MotoUI/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 12)
layout_mode = 2
size_flags_horizontal = 8
max_value = 1.0
show_percentage = false

[node name="DifficultyLabel" type="Label" parent="MotoUI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "Easy"

[editable path="BikeMesh/IKCharacterMesh"]
[editable path="BikeMesh/IKCharacterMesh/MixamoRacer"]
